Package_Tools/include-C/suitesparse/fertig/cholmod.h

typedef struct cholmod_common_struct
{
    double dbound ; 
    double grow0 ;      
    double grow1 ;      
    size_t grow2 ;      
    size_t maxrank ;    
    double supernodal_switch ;  
    int supernodal ;            
    int final_asis ;    
    int final_super ;   
    int final_ll ;      
    int final_pack ;    
    int final_monotonic ;   
    int final_resymbol ;    
    double zrelax [3] ; size_t nrelax [3] ;
    int prefer_zomplex ;    
    int prefer_upper ;  
    int quick_return_if_not_posdef ;    
    int prefer_binary ; 
    int print ;     
    int precise ;   
    int try_catch ; 
    void (*error_handler) (int status, const char *file, int line,
        const char *message) ;
    int nmethods ;  
    int current ;   
    int selected ;  
    struct cholmod_method_struct
    {
        double lnz ;    
        double fl ;     
        double prune_dense ;    
        double prune_dense2 ;   
        double nd_oksep ;   
        double other_1 [4] ;    
        size_t nd_small ;   
        double other_2 [4] ;    
        int aggressive ;    
        int order_for_lu ;  
        int nd_compress ;   
        int nd_camd ;   
        int nd_components ; 
        int ordering ;  
        size_t other_3 [4] ;    
    }
    method [CHOLMOD_MAXMETHODS + 1] ;
    int postorder ; 
    int default_nesdis ;    
    double metis_memory ;   
    double metis_dswitch ;  
    size_t metis_nswitch ;  
    size_t nrow ;       
    int64_t mark ;      
    size_t iworksize ;  
    size_t xworkbytes ; 
    void *Flag ;    
    void *Head ;    
    void *Xwork ;   
    void *Iwork ;   
    int itype ;     
    int other_5 ;   
    int no_workspace_reallocate ;   
    int status ;    
    double fl ;     
    double lnz ;    
    double anz ;    
    double modfl ;  
    size_t malloc_count ;   
    size_t memory_usage ;   
    size_t memory_inuse ;   
    double nrealloc_col ;   
    double nrealloc_factor ;
    double ndbounds_hit ;   
    double rowfacfl ;       
    double aatfl ;          
    int called_nd ; 
    int blas_ok ;   
    double SPQR_grain ;     
    double SPQR_small ;     
    int SPQR_shrink ;       
    int SPQR_nthreads ;     
    double SPQR_flopcount ;         
    double SPQR_analyze_time ;      
    double SPQR_factorize_time ;    
    double SPQR_solve_time ;        
    double SPQR_flopcount_bound ;   
    double SPQR_tol_used ;          
    double SPQR_norm_E_fro ;        
    int64_t SPQR_istat [8] ;        
    double nsbounds_hit ;   
    float sbound ;  
    float other_6 ; 
    int useGPU ; 
    size_t maxGpuMemBytes ;     
    double maxGpuMemFraction ;  
    size_t gpuMemorySize ;      
    double gpuKernelTime ;      
    int64_t gpuFlops ;          
    int gpuNumKernelLaunches ;  
    CHOLMOD_CUBLAS_HANDLE cublasHandle ;
    CHOLMOD_CUDASTREAM  gpuStream [CHOLMOD_HOST_SUPERNODE_BUFFERS] ;
    CHOLMOD_CUDAEVENT   cublasEventPotrf [3] ;
    CHOLMOD_CUDAEVENT   updateCKernelsComplete ;
    CHOLMOD_CUDAEVENT   updateCBuffersFree [CHOLMOD_HOST_SUPERNODE_BUFFERS] ;
    void *dev_mempool ; 
    size_t dev_mempool_size ;
    void *host_pinned_mempool ; 
    size_t host_pinned_mempool_size ;
    size_t devBuffSize ;
    int    ibuffer ;
    double syrkStart ;          
    double cholmod_cpu_gemm_time ;
    double cholmod_cpu_syrk_time ;
    double cholmod_cpu_trsm_time ;
    double cholmod_cpu_potrf_time ;
    double cholmod_gpu_gemm_time ;
    double cholmod_gpu_syrk_time ;
    double cholmod_gpu_trsm_time ;
    double cholmod_gpu_potrf_time ;
    double cholmod_assemble_time ;
    double cholmod_assemble_time2 ;
    size_t cholmod_cpu_gemm_calls ;
    size_t cholmod_cpu_syrk_calls ;
    size_t cholmod_cpu_trsm_calls ;
    size_t cholmod_cpu_potrf_calls ;
    size_t cholmod_gpu_gemm_calls ;
    size_t cholmod_gpu_syrk_calls ;
    size_t cholmod_gpu_trsm_calls ;
    size_t cholmod_gpu_potrf_calls ;
    double chunk ;      
    int nthreads_max ; 
    #ifdef BLAS_DUMP
    FILE *blas_dump ;  
    #endif
} cholmod_common ;
typedef struct cholmod_sparse_struct
{
    size_t nrow ;   
    size_t ncol ;   
    size_t nzmax ;  
    void *p ;   
    void *i ;   
    void *nz ;  
    void *x ;   
    void *z ;   
    int stype ; 
    int itype ; 
    int xtype ;     
    int dtype ;     
    int sorted ;    
    int packed ;    
} cholmod_sparse ;
int64_t cholmod_band_nnz    
(
    cholmod_sparse *A,      
    int64_t k1,             
    int64_t k2,
    bool ignore_diag,       
    cholmod_common *Common
) ;
int64_t cholmod_l_band_nnz (cholmod_sparse *, int64_t, int64_t, bool,
    cholmod_common *) ;
cholmod_sparse *cholmod_band    
(
    cholmod_sparse *A,      
    int64_t k1,             
    int64_t k2,
    int mode,               
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_band (cholmod_sparse *, int64_t, int64_t, int,
    cholmod_common *) ;
int cholmod_band_inplace
(
    int64_t k1,             
    int64_t k2,
    int mode,               
    cholmod_sparse *A,      
    cholmod_common *Common
) ;
int cholmod_l_band_inplace (int64_t, int64_t, int, cholmod_sparse *,
    cholmod_common *) ;
cholmod_sparse *cholmod_aat     
(
    cholmod_sparse *A,  
    int32_t *fset,      
    size_t fsize,       
    int mode,           
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_aat (cholmod_sparse *, int64_t *, size_t, int,
    cholmod_common *) ;
cholmod_sparse *cholmod_copy_sparse  
(
    cholmod_sparse *A,     
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_copy_sparse (cholmod_sparse *, cholmod_common *) ;
cholmod_sparse *cholmod_copy        
(
    cholmod_sparse *A,  
    int stype,          
    int mode,           
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_copy (cholmod_sparse *, int, int, cholmod_common *) ;
cholmod_sparse *cholmod_add     
(
    cholmod_sparse *A,  
    cholmod_sparse *B,  
    double alpha [2],   
    double beta [2],    
    int mode,           
    int sorted,         
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_add (cholmod_sparse *, cholmod_sparse *, double *,
    double *, int, int, cholmod_common *) ;
int cholmod_sparse_xtype
(
    int to_xdtype,      
    cholmod_sparse *A,  
    cholmod_common *Common
) ;
int cholmod_l_sparse_xtype (int, cholmod_sparse *, cholmod_common *) ;
typedef struct cholmod_factor_struct
{
    size_t n ;      
    size_t minor ;  
    void *Perm ;    
    void *ColCount ;
    void *IPerm ;   
    size_t nzmax ;  
    void *p ;       
    void *i ;       
    void *x ;       
    void *z ;       
    void *nz ;      
    void *next ;    
    void *prev ;    
    size_t nsuper ;     
    size_t ssize ;      
    size_t xsize ;      
    size_t maxcsize ;   
    size_t maxesize ;   
    void *super ;       
    void *pi ;          
    void *px ;          
    void *s ;           
    int ordering ;      
    int is_ll ;         
    int is_super ;      
    int is_monotonic ;  
    int itype ; 
    int xtype ; 
    int dtype ; 
    int useGPU; 
} cholmod_factor ;
cholmod_factor *cholmod_allocate_factor         
(
    size_t n,               
    cholmod_common *Common
) ;
cholmod_factor *cholmod_l_allocate_factor (size_t, cholmod_common *) ;
cholmod_factor *cholmod_alloc_factor    
(
    size_t n,               
    int dtype,              
    cholmod_common *Common
) ;
cholmod_factor *cholmod_l_alloc_factor (size_t, int, cholmod_common *) ;
int cholmod_free_factor
(
    cholmod_factor **L,         
    cholmod_common *Common
) ;
int cholmod_l_free_factor (cholmod_factor **, cholmod_common *) ;
int cholmod_reallocate_factor
(
    size_t nznew,       
    cholmod_factor *L,  
    cholmod_common *Common
) ;
int cholmod_l_reallocate_factor (size_t, cholmod_factor *, cholmod_common *) ;
int cholmod_change_factor
(
    int to_xtype,       
    int to_ll,          
    int to_super,       
    int to_packed,      
    int to_monotonic,   
    cholmod_factor *L,  
    cholmod_common *Common
) ;
int cholmod_l_change_factor (int, int, int, int, int, cholmod_factor *,
    cholmod_common *) ;
int cholmod_pack_factor
(
    cholmod_factor *L,      
    cholmod_common *Common
) ;
int cholmod_l_pack_factor (cholmod_factor *, cholmod_common *) ;
int cholmod_reallocate_column
(
    size_t j,                   
    size_t need,                
    cholmod_factor *L,          
    cholmod_common *Common
) ;
int cholmod_l_reallocate_column (size_t, size_t, cholmod_factor *,
    cholmod_common *) ;
cholmod_sparse *cholmod_factor_to_sparse    
(
    cholmod_factor *L,  
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_factor_to_sparse (cholmod_factor *,
    cholmod_common *) ;
cholmod_factor *cholmod_copy_factor     
(
    cholmod_factor *L,      
    cholmod_common *Common
) ;
cholmod_factor *cholmod_l_copy_factor (cholmod_factor *, cholmod_common *) ;
int cholmod_factor_xtype
(
    int to_xdtype,      
    cholmod_factor *L,  
    cholmod_common *Common
) ;
int cholmod_l_factor_xtype (int, cholmod_factor *, cholmod_common *) ;
typedef struct cholmod_dense_struct
{
    size_t nrow ;       
    size_t ncol ;
    size_t nzmax ;      
    size_t d ;          
    void *x ;           
    void *z ;           
    int xtype ;         
    int dtype ;         
} cholmod_dense ;
cholmod_dense *cholmod_allocate_dense
(
    size_t nrow,    
    size_t ncol,    
    size_t d,       
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_allocate_dense (size_t, size_t, size_t, int,
    cholmod_common *) ;
cholmod_dense *cholmod_zeros
(
    size_t nrow,    
    size_t ncol,    
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_zeros (size_t, size_t, int, cholmod_common *) ;
cholmod_dense *cholmod_ones
(
    size_t nrow,    
    size_t ncol,    
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_ones (size_t, size_t, int, cholmod_common *) ;
cholmod_dense *cholmod_eye      
(
    size_t nrow,    
    size_t ncol,    
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_eye (size_t, size_t, int, cholmod_common *) ;
int cholmod_free_dense
(
    cholmod_dense **X,          
    cholmod_common *Common
) ;
int cholmod_l_free_dense (cholmod_dense **, cholmod_common *) ;
cholmod_dense *cholmod_ensure_dense
(
    cholmod_dense **X,  
    size_t nrow,    
    size_t ncol,    
    size_t d,       
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_ensure_dense (cholmod_dense **, size_t, size_t,
    size_t, int, cholmod_common *) ;
cholmod_dense *cholmod_sparse_to_dense      
(
    cholmod_sparse *A,      
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_sparse_to_dense (cholmod_sparse *, cholmod_common *) ;
int64_t cholmod_dense_nnz       
(
    cholmod_dense *X,       
    cholmod_common *Common
) ;
int64_t cholmod_l_dense_nnz (cholmod_dense *, cholmod_common *) ;
cholmod_sparse *cholmod_dense_to_sparse         
(
    cholmod_dense *X,       
    int mode,               
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_dense_to_sparse (cholmod_dense *, int,
    cholmod_common *) ;
cholmod_dense *cholmod_copy_dense   
(
    cholmod_dense *X,   
    cholmod_common *Common
) ;
cholmod_dense *cholmod_l_copy_dense (cholmod_dense *, cholmod_common *) ;
int cholmod_copy_dense2
(
    cholmod_dense *X,   
    cholmod_dense *Y,   
    cholmod_common *Common
) ;
int cholmod_l_copy_dense2 (cholmod_dense *, cholmod_dense *, cholmod_common *) ;
int cholmod_dense_xtype
(
    int to_xdtype,      
    cholmod_dense *X,   
    cholmod_common *Common
) ;
int cholmod_l_dense_xtype (int, cholmod_dense *, cholmod_common *) ;
typedef struct cholmod_triplet_struct
{
    size_t nrow ;   
    size_t ncol ;   
    size_t nzmax ;  
    size_t nnz ;    
    void *i ;   
    void *j ;   
    void *x ;   
    void *z ;   
    int stype ; 
    int itype ; 
    int xtype ;     
    int dtype ;     
} cholmod_triplet ;
cholmod_triplet *cholmod_allocate_triplet       
(
    size_t nrow,    
    size_t ncol,    
    size_t nzmax,   
    int stype,      
    int xdtype,     
    cholmod_common *Common
) ;
cholmod_triplet *cholmod_l_allocate_triplet (size_t, size_t, size_t, int, int,
    cholmod_common *) ;
int cholmod_free_triplet
(
    cholmod_triplet **T,        
    cholmod_common *Common
) ;
int cholmod_l_free_triplet (cholmod_triplet **, cholmod_common *) ;
int cholmod_reallocate_triplet
(
    size_t nznew,       
    cholmod_triplet *T, 
    cholmod_common *Common
) ;
int cholmod_l_reallocate_triplet (size_t, cholmod_triplet *, cholmod_common *) ;
cholmod_triplet *cholmod_sparse_to_triplet
(
    cholmod_sparse *A,      
    cholmod_common *Common
) ;
cholmod_triplet *cholmod_l_sparse_to_triplet (cholmod_sparse *,
    cholmod_common *) ;
cholmod_sparse *cholmod_triplet_to_sparse       
(
    cholmod_triplet *T,     
    size_t nzmax,           
    cholmod_common *Common
) ;
cholmod_sparse *cholmod_l_triplet_to_sparse (cholmod_triplet *, size_t,
    cholmod_common *) ;
cholmod_triplet *cholmod_copy_triplet   
(
    cholmod_triplet *T,     
    cholmod_common *Common
) ;
cholmod_triplet *cholmod_l_copy_triplet (cholmod_triplet *, cholmod_common *) ;
int cholmod_triplet_xtype
(
    int to_xdtype,      
    cholmod_triplet *T, 
    cholmod_common *Common
) ;
int cholmod_l_triplet_xtype (int, cholmod_triplet *, cholmod_common *) ;