Packages_2024/suitesparse_7.6.1/suitesparse/cholmod.inc


function cholmod_band_nnz(A: Pcholmod_sparse; k1: Tint64_t; k2: Tint64_t; ignore_diag: boolean; Common: Pcholmod_common): Tint64_t; cdecl; external libcholmod;
function cholmod_l_band_nnz(para1: Pcholmod_sparse; para2: Tint64_t; para3: Tint64_t; para4: boolean; para5: Pcholmod_common): Tint64_t; cdecl; external libcholmod;

function cholmod_band(A: Pcholmod_sparse; k1: Tint64_t; k2: Tint64_t; mode: longint; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_band(para1: Pcholmod_sparse; para2: Tint64_t; para3: Tint64_t; para4: longint; para5: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_band_inplace(k1: Tint64_t; k2: Tint64_t; mode: longint; A: Pcholmod_sparse; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_band_inplace(para1: Tint64_t; para2: Tint64_t; para3: longint; para4: Pcholmod_sparse; para5: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_aat(A: Pcholmod_sparse; fset: Pint32_t; fsize: Tsize_t; mode: longint; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_aat(para1: Pcholmod_sparse; para2: Pint64_t; para3: Tsize_t; para4: longint; para5: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_copy_sparse(A: Pcholmod_sparse; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_copy_sparse(para1: Pcholmod_sparse; para2: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_copy(A: Pcholmod_sparse; stype: longint; mode: longint; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_copy(para1: Pcholmod_sparse; para2: longint; para3: longint; para4: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_add(A: Pcholmod_sparse; B: Pcholmod_sparse; alpha: Pdouble; beta: Pdouble; mode: longint;
  sorted: longint; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_add(para1: Pcholmod_sparse; para2: Pcholmod_sparse; para3: Pdouble; para4: Pdouble; para5: longint;
  para6: longint; para7: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_sparse_xtype(to_xdtype: longint; A: Pcholmod_sparse; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_sparse_xtype(para1: longint; para2: Pcholmod_sparse; para3: Pcholmod_common): longint; cdecl; external libcholmod;

type
  Tcholmod_factor = record
    n: Tsize_t;
    minor: Tsize_t;
    Perm: pointer;
    ColCount: pointer;
    IPerm: pointer;
    nzmax: Tsize_t;
    p: pointer;
    i: pointer;
    x: pointer;
    z: pointer;
    nz: pointer;
    next: pointer;
    prev: pointer;
    nsuper: Tsize_t;
    ssize: Tsize_t;
    xsize: Tsize_t;
    maxcsize: Tsize_t;
    maxesize: Tsize_t;
    super: pointer;
    pi: pointer;
    px: pointer;
    s: pointer;
    ordering: longint;
    is_ll: longint;
    is_super: longint;
    is_monotonic: longint;
    itype: longint;
    xtype: longint;
    dtype: longint;
    useGPU: longint;
  end;
  Pcholmod_factor = ^Tcholmod_factor;
  PPcholmod_factor = ^Pcholmod_factor;

function cholmod_allocate_factor(n: Tsize_t; Common: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;
function cholmod_l_allocate_factor(para1: Tsize_t; para2: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;

function cholmod_alloc_factor(n: Tsize_t; dtype: longint; Common: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;
function cholmod_l_alloc_factor(para1: Tsize_t; para2: longint; para3: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;

function cholmod_free_factor(L: PPcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_free_factor(para1: PPcholmod_factor; para2: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_reallocate_factor(nznew: Tsize_t; L: Pcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_reallocate_factor(para1: Tsize_t; para2: Pcholmod_factor; para3: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_change_factor(to_xtype: longint; to_ll: longint; to_super: longint; to_packed: longint; to_monotonic: longint;
  L: Pcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_change_factor(para1: longint; para2: longint; para3: longint; para4: longint; para5: longint;
  para6: Pcholmod_factor; para7: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_pack_factor(L: Pcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_pack_factor(para1: Pcholmod_factor; para2: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_reallocate_column(j: Tsize_t; need: Tsize_t; L: Pcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_reallocate_column(para1: Tsize_t; para2: Tsize_t; para3: Pcholmod_factor; para4: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_factor_to_sparse(L: Pcholmod_factor; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_factor_to_sparse(para1: Pcholmod_factor; para2: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_copy_factor(L: Pcholmod_factor; Common: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;
function cholmod_l_copy_factor(para1: Pcholmod_factor; para2: Pcholmod_common): Pcholmod_factor; cdecl; external libcholmod;

function cholmod_factor_xtype(to_xdtype: longint; L: Pcholmod_factor; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_factor_xtype(para1: longint; para2: Pcholmod_factor; para3: Pcholmod_common): longint; cdecl; external libcholmod;

type
  Tcholmod_dense = record
    nrow: Tsize_t;
    ncol: Tsize_t;
    nzmax: Tsize_t;
    d: Tsize_t;
    x: pointer;
    z: pointer;
    xtype: longint;
    dtype: longint;
  end;
  Pcholmod_dense = ^Tcholmod_dense;
  PPcholmod_dense = ^Pcholmod_dense;

function cholmod_allocate_dense(nrow: Tsize_t; ncol: Tsize_t; d: Tsize_t; xdtype: longint; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_allocate_dense(para1: Tsize_t; para2: Tsize_t; para3: Tsize_t; para4: longint; para5: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_zeros(nrow: Tsize_t; ncol: Tsize_t; xdtype: longint; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_zeros(para1: Tsize_t; para2: Tsize_t; para3: longint; para4: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_ones(nrow: Tsize_t; ncol: Tsize_t; xdtype: longint; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_ones(para1: Tsize_t; para2: Tsize_t; para3: longint; para4: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_eye(nrow: Tsize_t; ncol: Tsize_t; xdtype: longint; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_eye(para1: Tsize_t; para2: Tsize_t; para3: longint; para4: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_free_dense(X: PPcholmod_dense; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_free_dense(para1: PPcholmod_dense; para2: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_ensure_dense(X: PPcholmod_dense; nrow: Tsize_t; ncol: Tsize_t; d: Tsize_t; xdtype: longint;
  Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_ensure_dense(para1: PPcholmod_dense; para2: Tsize_t; para3: Tsize_t; para4: Tsize_t; para5: longint;
  para6: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_sparse_to_dense(A: Pcholmod_sparse; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_sparse_to_dense(para1: Pcholmod_sparse; para2: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_dense_nnz(X: Pcholmod_dense; Common: Pcholmod_common): Tint64_t; cdecl; external libcholmod;
function cholmod_l_dense_nnz(para1: Pcholmod_dense; para2: Pcholmod_common): Tint64_t; cdecl; external libcholmod;

function cholmod_dense_to_sparse(X: Pcholmod_dense; mode: longint; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_dense_to_sparse(para1: Pcholmod_dense; para2: longint; para3: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_copy_dense(X: Pcholmod_dense; Common: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;
function cholmod_l_copy_dense(para1: Pcholmod_dense; para2: Pcholmod_common): Pcholmod_dense; cdecl; external libcholmod;

function cholmod_copy_dense2(X: Pcholmod_dense; Y: Pcholmod_dense; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_copy_dense2(para1: Pcholmod_dense; para2: Pcholmod_dense; para3: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_dense_xtype(to_xdtype: longint; X: Pcholmod_dense; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_dense_xtype(para1: longint; para2: Pcholmod_dense; para3: Pcholmod_common): longint; cdecl; external libcholmod;

type
  Tcholmod_triplet = record
    nrow: Tsize_t;
    ncol: Tsize_t;
    nzmax: Tsize_t;
    nnz: Tsize_t;
    i: pointer;
    j: pointer;
    x: pointer;
    z: pointer;
    stype: longint;
    itype: longint;
    xtype: longint;
    dtype: longint;
  end;
  Pcholmod_triplet = ^Tcholmod_triplet;
  PPcholmod_triplet = ^Pcholmod_triplet;

function cholmod_allocate_triplet(nrow: Tsize_t; ncol: Tsize_t; nzmax: Tsize_t; stype: longint; xdtype: longint;
  Common: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;
function cholmod_l_allocate_triplet(para1: Tsize_t; para2: Tsize_t; para3: Tsize_t; para4: longint; para5: longint;
  para6: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;

function cholmod_free_triplet(T: PPcholmod_triplet; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_free_triplet(para1: PPcholmod_triplet; para2: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_reallocate_triplet(nznew: Tsize_t; T: Pcholmod_triplet; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_reallocate_triplet(para1: Tsize_t; para2: Pcholmod_triplet; para3: Pcholmod_common): longint; cdecl; external libcholmod;

function cholmod_sparse_to_triplet(A: Pcholmod_sparse; Common: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;
function cholmod_l_sparse_to_triplet(para1: Pcholmod_sparse; para2: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;

function cholmod_triplet_to_sparse(T: Pcholmod_triplet; nzmax: Tsize_t; Common: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;
function cholmod_l_triplet_to_sparse(para1: Pcholmod_triplet; para2: Tsize_t; para3: Pcholmod_common): Pcholmod_sparse; cdecl; external libcholmod;

function cholmod_copy_triplet(T: Pcholmod_triplet; Common: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;
function cholmod_l_copy_triplet(para1: Pcholmod_triplet; para2: Pcholmod_common): Pcholmod_triplet; cdecl; external libcholmod;

function cholmod_triplet_xtype(to_xdtype: longint; T: Pcholmod_triplet; Common: Pcholmod_common): longint; cdecl; external libcholmod;
function cholmod_l_triplet_xtype(para1: longint; para2: Pcholmod_triplet; para3: Pcholmod_common): longint; cdecl; external libcholmod;
